--- a/web-development.html
+++ b/web-development.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content5 cid-rO7IrbkxZk mbr-parallax-background" id="content5-32">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-rO7IrbkxZk mbr-parallax-background" id="content5-32">
 
     
 
@@ -188,12 +188,10 @@
 
             <div class="plan col-12 mx-2 my-2 justify-content-center col-lg-6">
                 <div class="plan-header text-center pt-5">
-                    <h3 class="plan-title mbr-fonts-style display-5"><strong>
-                        STATIC
-                    </strong></h3>
+                    <h3 class="plan-title mbr-fonts-style display-5">Informational Sites<br><strong>-STATIC-</strong></h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5"></span>
-                        <span class="price-figure mbr-fonts-style display-7">Informational , Brochure/Catalog, Blogging &amp; Personal sites</span>
+                        <span class="price-figure mbr-fonts-style display-4"></span>
                         <small class="price-term mbr-fonts-style display-7"></small>
                     </div>
                 </div>
@@ -210,19 +208,17 @@
 
             <div class="plan col-12 mx-2 my-2 justify-content-center col-lg-6">
                 <div class="plan-header text-center pt-5">
-                    <h3 class="plan-title mbr-fonts-style display-5"><strong>
-                        E-COMMERCE
-                    </strong></h3>
+                    <h3 class="plan-title mbr-fonts-style display-5">Online Business Sites<br><strong>-E-Commerce-</strong></h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5"></span>
-                        <span class="price-figure mbr-fonts-style display-7">Online Business sites</span>
+                        <span class="price-figure mbr-fonts-style display-4"></span>
                         <small class="price-term mbr-fonts-style display-7"><br><br><br></small>
                     </div>
                 </div>
                 <div class="plan-body">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">&nbsp;Website design and development
+                            <li class="list-group-item">Website design and development
 </li><li class="list-group-item">Unlimited Pages
 </li><li class="list-group-item">Web hosting
 </li><li class="list-group-item">Responsive Design
