--- a/web-development.html
+++ b/web-development.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-section content5 cid-rO7IrbkxZk mbr-parallax-background" id="content5-32">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section content5 cid-rO7IrbkxZk mbr-parallax-background" id="content5-32">
 
     
 
@@ -188,10 +188,12 @@
 
             <div class="plan col-12 mx-2 my-2 justify-content-center col-lg-6">
                 <div class="plan-header text-center pt-5">
-                    <h3 class="plan-title mbr-fonts-style display-5">Informational Sites<br><strong>-STATIC-</strong></h3>
+                    <h3 class="plan-title mbr-fonts-style display-5"><strong>
+                        STATIC
+                    </strong></h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5"></span>
-                        <span class="price-figure mbr-fonts-style display-4"></span>
+                        <span class="price-figure mbr-fonts-style display-7">Informational , Brochure/Catalog, Blogging &amp; Personal sites</span>
                         <small class="price-term mbr-fonts-style display-7"></small>
                     </div>
                 </div>
@@ -202,23 +204,25 @@
 </span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">Unlimited Pages</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">Web hosting</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">Responsive Design</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">Image &amp; Video Assets</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">24/7 Technical Support</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">Google Analytics Intergration</span></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">Multilungual Support</span></li><li class="list-group-item">Extras- FAQ, Forums, Blogs, Memberships</li><li class="list-group-item">HTML 5 &amp; CSS 3</li><li class="list-group-item"><span style="background-color: transparent; font-size: 1.25rem; text-align: center;">Content Management System</span></li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="contact.html" class="btn btn-primary display-4">Build Now</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-primary display-4">Build Now</a></div>
                 </div>
             </div>
 
             <div class="plan col-12 mx-2 my-2 justify-content-center col-lg-6">
                 <div class="plan-header text-center pt-5">
-                    <h3 class="plan-title mbr-fonts-style display-5">Online Business Sites<br><strong>-E-Commerce-</strong></h3>
+                    <h3 class="plan-title mbr-fonts-style display-5"><strong>
+                        E-COMMERCE
+                    </strong></h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5"></span>
-                        <span class="price-figure mbr-fonts-style display-4"></span>
+                        <span class="price-figure mbr-fonts-style display-7">Online Business sites</span>
                         <small class="price-term mbr-fonts-style display-7"><br><br><br></small>
                     </div>
                 </div>
                 <div class="plan-body">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item">Website design and development
+                            <li class="list-group-item">&nbsp;Website design and development
 </li><li class="list-group-item">Unlimited Pages
 </li><li class="list-group-item">Web hosting
 </li><li class="list-group-item">Responsive Design
@@ -232,7 +236,7 @@
 </li><li class="list-group-item">Secure Transaction with SSL</li><li class="list-group-item">24/7 Secuirity Monnitoring &amp; DDOS Protection</li><li class="list-group-item">Advanced Search Options</li><li class="list-group-item">Rating Review System</li><li class="list-group-item">Content Management System</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="contact.html" class="btn btn-primary display-4">Build Now</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://mobirise.co" class="btn btn-primary display-4">Build Now</a></div>
                 </div>
             </div>
 
