--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><section class="header1 cid-rTpe2wAohN mbr-fullscreen mbr-parallax-background" id="header1-3n">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="header1 cid-rTpe2wAohN mbr-fullscreen mbr-parallax-background" id="header1-3n">
 
     
 
@@ -94,7 +94,7 @@
                 </p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white-outline display-4" href="outsource-marketing.html">
                         Outsource Marketing</a> <a class="btn btn-md btn-white-outline display-4" href="web-development.html">
-                        Web Development</a> <a class="btn btn-md btn-white-outline display-4" href="web-development.html">
+                        Web Development</a> <a class="btn btn-md btn-white-outline display-4" href="social-media-marketing.html">
                         Social Media Marketing</a> <a class="btn btn-md btn-white-outline display-4" href="seo.html">
                         SEO</a> <a class="btn btn-md btn-white-outline display-4" href="analytics-consultancy.html">
                         Analytics Consultancy</a> <a class="btn btn-md btn-white-outline display-4" href="mobile-app-development-srilanka.html">
