--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-rO7hgBfY1A mbr-parallax-background" id="content5-1k">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-rO7hgBfY1A mbr-parallax-background" id="content5-1k">
 
     
 
@@ -102,8 +102,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-1"><strong>COME ON.&nbsp;</strong><strong>GET IN
-&nbsp;</strong><strong>TOUCH.</strong></h2>
+                <h2 class="align-center pb-3 mbr-fonts-style display-2"><strong>Come on.Get in Touch</strong></h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7"><strong>Business Hours +5:30 GMT
 </strong><div><strong>​
 <span style="font-size: 1.25rem;">9.00 a.m - 6.00 p.m</span></strong></div></h3>
@@ -198,7 +197,7 @@ Borella
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G7eBo5Yo47MyY1BKEsa0bfW4rkV3Y30aHEXWhNkJ/5OiA5EcxzLdq/at7Xj37HjyAkxfOTbkZGADirp3BbjyqCB+cX/DDnEou5/8a3s7XdTgIPmG7WT+BjEryJsbROwj">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IjuwxN2THcxkYovw/wHBxoTKVZNRd+Wk3bq5ByN6AXRRMk/4Uq5d9+kQwVKKAZfQpmjoRqf9xJyhy988M9CbN5EjrfiAjJwWLsHLu72B7FqoU/J0i5Cfspn3I5A91pjB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We will get back to you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
