--- a/seo.html
+++ b/seo.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-rNUqJSPMSc mbr-parallax-background" id="content5-17">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section content5 cid-rNUqJSPMSc mbr-parallax-background" id="content5-17">
 
     
 
