--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="mbr-section content5 cid-rNUkXTJlP4 mbr-parallax-background" id="content5-z">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="mbr-section content5 cid-rNUkXTJlP4 mbr-parallax-background" id="content5-z">
 
     
 
