--- a/seo.html
+++ b/seo.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section content5 cid-rNUqJSPMSc mbr-parallax-background" id="content5-17">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section content5 cid-rNUqJSPMSc mbr-parallax-background" id="content5-17">
 
     
 
@@ -105,7 +105,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 35%;">
-                    <img src="assets/images/search-engine-optimizationseo.webp" alt="Mobirise" title="">
+                    <img src="assets/images/search-engine-optimizationseo-424x273.png" alt="Mobirise" title="">
                 </div>
                 <div class=" align-left aside-content">
                     
